[package]
name = "blend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
fs_extra = "1.3.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_with = "3.6.1"
serde_yaml = "0.9.31"
tempfile = "3.10.0"
